<ScrollView
    android:id="@+id/sv_machete"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >


        <LinearLayout
            android:id="@+id/ll_row21"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_211"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_11"
                app:sound_string="borat_mynameaborat"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_212"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_12"
                app:sound_string="borat_thisamycountry"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_213"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_13"
                app:sound_string="borat_entryplease"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_row22"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_221"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_21"
                app:sound_string="borat_iarrive"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_222"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_22"
                app:sound_string="borat_kinginthecastle"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_223"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_23"
                app:sound_string="borat_watchladies"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_row23"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_231"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_31"
                app:sound_string="borat_beautiful"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_232"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_32"
                app:sound_string="borat_fivewoman"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_233"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_33"
                app:sound_string="borat_eatmytits"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_row24"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_241"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_41"
                app:sound_string="borat_iwilleatyour"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_242"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_42"
                app:sound_string="borat_uzbekistan"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_243"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_43"
                app:sound_string="borat_anusbroken"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_row25"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_251"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_51"
                app:sound_string="borat_howdypartners"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_252"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_52"
                app:sound_string="borat_vanillaface"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_253"
                android:layout_weight="1"
                app:image_string="borat_icon"
                app:button_label="@string/borat_53"
                app:sound_string="borat_letsgetdrunk"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>