<ScrollView
    android:id="@+id/sv_movie"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >


        <LinearLayout
            android:id="@+id/ll_row01"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_011"
                android:layout_weight="1"
                app:image_string="movies_plane"
                app:button_label="@string/movies_11"
                app:sound_string="movies_airforce_one_hijacked"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_012"
                android:layout_weight="1"
                app:image_string="movies_clock"
                app:button_label="@string/movies_12"
                app:sound_string="movies_almost_9_got_to_go_towork"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_013"
                android:layout_weight="1"
                app:image_string="movies_avatar"
                app:button_label="@string/movies_13"
                app:sound_string="movies_beautiful_friendship"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_row02"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_021"
                android:layout_weight="1"
                app:image_string="movies_bluesbrothers"
                app:button_label="@string/movies_21"
                app:sound_string="movies_bluesbrothers"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_022"
                android:layout_weight="1"
                app:image_string="movies_borat_sister"
                app:button_label="@string/movies_22"
                app:sound_string="movies_borat_number4"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_023"
                android:layout_weight="1"
                app:image_string="movies_forrest_chocolate"
                app:button_label="@string/movies_23"
                app:sound_string="movies_chocolate_box"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_row03"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_031"
                android:layout_weight="1"
                app:image_string="movies_forrest_chocolate"
                app:button_label="@string/movies_31"
                app:sound_string="movies_forrest_gump"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_032"
                android:layout_weight="1"
                app:image_string="movies_failure"
                app:button_label="@string/movies_32"
                app:sound_string="movies_failure_is_not_an_option"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_033"
                android:layout_weight="1"
                app:image_string="movies_honor"
                app:button_label="@string/movies_33"
                app:sound_string="movies_gentlemen_privilege_2_fly_with_you"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_row04"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_041"
                android:layout_weight="1"
                app:image_string="movies_houston_problem"
                app:button_label="@string/movies_41"
                app:sound_string="movies_houston_we_have_a_problem"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_042"
                android:layout_weight="1"
                app:image_string="movies_independence_day"
                app:button_label="@string/movies_42"
                app:sound_string="movies_independenceday"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_043"
                android:layout_weight="1"
                app:image_string="movies_jurassicpark"
                app:button_label="@string/movies_43"
                app:sound_string="movies_welcome"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_row05"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_051"
                android:layout_weight="1"
                app:image_string="movies_applepie"
                app:button_label="@string/movies_51"
                app:sound_string="movies_like_a_warm_applepie"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_052"
                android:layout_weight="1"
                app:image_string="app_daycare"
                app:button_label="@string/movies_52"
                app:sound_string="movies_schoolboy"
                />
            <fragment
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                class="com.jooik.nibbelboard.com.jooik.nibbelboard.frags.FragmentSquareButton"
                android:id="@+id/frag_053"
                android:layout_weight="1"
                app:image_string="piss_on_grave"
                app:button_label="@string/movies_53"
                app:sound_string="movies_piss_on_grave"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>